--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
                 <img class="recommendedImg" src="../img/recommendedImg.jpg" alt="">
                 <span class="recommendedSign">empfohlen</span>
                 <span class="recommendedTitle">Pasta mit Pilzen und Hühnchen</span>
-                <span class="recommendedNotice">Empfohlen aufgrund von Rezepten, die dir gefallen</span>
+                <span class="recommendedNotice">Empfohlen aufgrund von über krassen Alienn Rezepten, die dir gefallen</span>
             </div>
         </div>
     </div>
