--- a/html/index.html
+++ b/html/index.html
@@ -21,10 +21,23 @@
     <div class="mainContainer">
         <div class="recommendedContainer">
             <div class="recommendedFood">
-                <img class="recommendedImg" src="../img/recommendedImg.jpg" alt="">
-                <span class="recommendedSign">empfohlen</span>
-                <span class="recommendedTitle">Pasta mit Pilzen und Hühnchen</span>
-                <span class="recommendedNotice">Empfohlen aufgrund von Rezepten, die dir gefallen</span>
+                <div class="recommendedImg">
+                    <img class="foodPicture" src="../img/recommendedImg.jpg" alt="">
+                    <img class="recommendedArrow" src="../img/recommended-arrow-right.png" alt="">
+                    <span class="recommendedSign">Empfohlen</span>
+                    <span class="recommendedTitle">Pasta mit Pilzen und Hühnchen</span>
+                    <span class="recommendedNotice">Empfohlen aufgrund von Rezepten, die dir gefallen.</span>
+                </div>
+                
+            </div>
+            <div class="recommendedFood">
+                <div class="recommendedImg">
+                    <img class="foodPicture" src="../img/recommendedImg.jpg" alt="">
+                    <img class="recommendedArrow" src="../img/recommended-arrow-right.png" alt="">
+                    <span class="recommendedSign">Empfohlen</span>
+                    <span class="recommendedTitle">Pasta mit Pilzen und Hühnchen</span>
+                    <span class="recommendedNotice">Empfohlen aufgrund von Rezepten, die dir gefallen.</span>
+                </div>
             </div>
         </div>
     </div>
