--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
                     <img class="recommendedArrow" src="../img/recommended-arrow-right.png" alt="">
                     <span class="recommendedSign">Empfohlen</span>
                     <span class="recommendedTitle">Pasta mit Pilzen und Hühnchen</span>
-                    <span class="recommendedNotice">Empfohlen aufgrund von Rezepten, die dir gefallen.</span>
+                    <span class="recommendedNotice">Empfohlen aufgrund von unnormalen Rezepten, die dir gefallen.</span>
                 </div>
                 
             </div>
