--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
         <div class="mainContainer">
             <div class="MyFridgeContainer">
                 <div class="MyFridge">
-                    <div class="Ingredient">Tomaten<div class="editIcon"></div>
+                    <div class="Ingredient">Tomaten<div class="editIcon"></div></div>
                     <div class="Ingredient">Fisch</div>
                     <div class="Ingredient">Hackfleisch</div>
                     <div class="Ingredient">Sellerie</div>
